--- a/sksm.html
+++ b/sksm.html
@@ -202,6 +202,11 @@ border-radius: 8px;
 .color2 {
   color: red;
 }
+  .responsive-img {
+    width: 100%;      /* mindig a képernyő teljes szélessége */
+    height: auto;     /* magasság arányosan változik */
+    display: block;   /* ne maradjon körülötte üres hely */
+  }
   </style>
 </head>
 <body>
@@ -234,8 +239,8 @@ border-radius: 8px;
         <ul>
           <li>A játékban való részvételhez <strong>jelentkezni kell egy megadott űrlap kitöltésével</strong>.</li>
           <li>A jelentkezéssel minden résztvevő elfogadja a jelen játékszabályzatot.</li>
-          <li><strong>A játékból való visszalépésre a játék indulásától számított öt hónap elteltével van lehetőség.</strong></li>
-          <li>A visszalépéshez a résztvevőnek a hivatalos <strong>Visszalépési Űrlapot</strong>  kell kitölteni, amely a szabályok értelmében <strong> az ötödik hónaptól érhető el a weboldalon a játékszabályzatban a lap alján.</strong> </li>
+          <li><strong>A játékból való visszalépésre a játék indulásától számított öt hónap elteltével van lehetőség a hónap 05.-ig napjáig. </strong> <br> <i> (Visszalépési lehetőség: 2026.02.01. – 2026.02.05.)</i></li>
+          <li>A visszalépési űrlap a szabályok értelmében <strong>az ötödik hónaptól érhető el a weboldalon a játékszabályzatban a lap alján.  </strong> </li>
         </ul>
       </section>
 
@@ -255,6 +260,16 @@ border-radius: 8px;
         <p>Minden résztvevő, aki az adott héten teljesítette befizetéseit, <strong>+150 Ft jóváírást</strong> kap a saját <strong>Perselyszámlájára</strong>. A bónuszjóváírásokat a rendszer automatikusan rögzíti a weboldalon.</p>
       </section>
 
+        <section aria-labelledby="c51">
+        <h2 id="c51"> 5.1 Extra bónusz</h2>
+        <p>Aki <b>3 alkalommal (3x)</b> megduplázza a havi befizetését annak <b>5000 – Ft </b>bónusz jár. <br>
+
+      </section>
+
+
+    
+
+
       <section aria-labelledby="c6">
         <h2 id="c6">6. Főnyeremény szabályai</h2>
         <ul>
@@ -266,7 +281,7 @@ border-radius: 8px;
 
       <section aria-labelledby="c7">
         <h2 id="c7">7. Ellenőrzés és átláthatóság</h2>
-        <p>A Perselyszámlák állását és a befizetések rögzítését <strong>havi szinten</strong> ellenőrizzük és vezetjük. A heti bónuszok jóváírása is <strong>havi szinten a következő hónap 05. napjáig</strong> kerül összesítésre a weboldalon. A szabályok betartása minden résztvevő közös felelőssége.</p>
+        <p>A Perselyszámlák állását és a befizetések rögzítését <strong>havi szinten</strong> vezetjük. A heti bónuszok jóváírása is <strong>havi szinten a következő hónap 05. napjáig</strong> kerül összesítésre a weboldalon.</p>
       </section>
 
       <section aria-labelledby="c8">
@@ -276,11 +291,14 @@ border-radius: 8px;
           <br>– heti <strong>3.750 Ft</strong>, vagy
           <br>– havi <strong>15.000 Ft</strong> a hónap elején.
           <br>- Júniusban <strong>csak havi befizetésre van lehetőség </strong>a hónap 05. napjáig.
-        <p>A havi ellenőrzéseket megtakarítási tranzakciókról szóló bizonylatot <strong>minden hónap 05.-ig napjáig kérjük be emailben.</strong></p>
+        <p>A havi megtakarítási tranzakciókról szóló bizonylatot <strong>minden hónap 05.-ig napjáig szükséges elküldeni emailben.</strong></p>
        
       </p>
 
-        <span>------------------ <br><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1gDa1Cw4x2o6IfNZhg1j1qJ8aQ_rr761-/view?usp=sharing">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
+      <img src="KÜLFÖLD.jpg" alt="Külföld" height="150px" width="500px" style="text-align: center;" class="responsive-img"> <br><br>
+      <img src="orszagok.jpg" alt="Külföld" height="150px" width="500px" style="text-align: center;" class="responsive-img"> <br><br>
+
+        <span>------------------ <br><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1eo1BTQfwFcKFpT222E-JaShCrwAmDlFt/view?usp=sharing">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
 <br> <b><i>2025. szeptember 28. </i></b> 
 
       </section>
