--- a/akciok.html
+++ b/akciok.html
@@ -102,6 +102,19 @@ button:focus {
     </div>
   </div>
 
+
+  <main class="container">
+    <h1>KIEMELT AKCIÓK</h1>
+ <article class="card">
+      <img src="sksmakcio.jpg" alt="Akció">
+      <div class="card-body">
+        <h3 class="card-title"> Sok kicsi, sokra megy! </h3>
+        <p class="card-text"> <b>Promóciós időszak: <br> 2025. október 01. - 2026. június 05.</b> <br> Résztvevők: <br> Orosz Kristóf </p>
+        <a href="sksm.html"><button>ELOLVASOM A RÉSZLETEKET! </button></a>
+      </div>
+    </article> <br>
+    </article><br>
+     
   <!-- EGY KÁRTYA -->
   <main class="container">
     <h1>AKCIÓK</h1>
