--- a/befizetesek.html
+++ b/befizetesek.html
@@ -202,6 +202,9 @@
     <a href="hogyan.html">
   <img src="hogyanjavitott.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   <a href="akciok.html"></a>
+   <a href="akciok.html">
+  <img src="sksmresz.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
+  <a href="akciok.html"></a>
   </div>
  
 
