--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ a img {
   <button class="alert-close" aria-label="Figyelmeztetés bezárása" title="Bezárás">×</button>
   <p>⚠️⚠️<strong>FELHÍVÁS</strong>⚠️⚠️</p>
   <p>Indul az utolsó nagy játékunk!</p>
-  <p><strong><i>Jelentkezz játékunkra 2025.10.03.ig!</i></strong></p>
+  <p><strong><i>Jelentkezz játékunkra 2025.10.03.-ig!</i></strong></p>
   <p><a href="sksm.html">KATTINTS IDE A RÉSZLETEKÉRT!</a></p>
 </div>
 
