--- a/sksm.html
+++ b/sksm.html
@@ -221,6 +221,7 @@ border-radius: 8px;
 
       <section aria-labelledby="c1">
         <h4>Az oldal alján tudsz jelentkezni a játékra! <br><br> CSATLAKOZZ BÁTRAN <br><span style="font-size: 25px;">2025.10.03. (péntek) 23:59-ig</span>.</h4>
+        <h4 style="color: red;"><i>Nem megfelelő számodra valami? Túl sok a havi 15.000- Ft? <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3h6sqQaNbVV6RacJlcW4l7TXma50N_4Usu5JREqzRMRShYQ/viewform?usp=header">Ide kattintva</a> most 10.03. -ig leadhatod a módosítási javaslataidat!</h4></i>
         <h2 id="c1">1. A játék célja</h2>
         <p>A <em>Sok kicsi sokra megy</em> program célja, hogy a család közösen, játékos és motiváló módon gyűjtse össze a nyaraláshoz szükséges összeget. A játék során minden résztvevő napi, heti és végső vállalásokat teljesít, amelyekhez bónuszjóváírás és közös fődíj kapcsolódik. <br> A játék időtartama: <br><strong>2025. október 01. – 2026. június 05.</strong></p>
       </section>
