--- a/sksm.html
+++ b/sksm.html
@@ -220,8 +220,7 @@ border-radius: 8px;
       <h1 id="cim">Sok kicsi sokra megy</h1>
 
       <section aria-labelledby="c1">
-        <h4>Az oldal alján tudsz jelentkezni a játékra! <br><br> CSATLAKOZZ BÁTRAN <br><span style="font-size: 25px;">2025.10.03. (péntek) 23:59-ig</span>.</h4>
-        <h4 style="color: red;"><i>Nem megfelelő számodra valami? Túl sok a havi 15.000- Ft? <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3h6sqQaNbVV6RacJlcW4l7TXma50N_4Usu5JREqzRMRShYQ/viewform?usp=header">Ide kattintva</a> most 10.03. -ig leadhatod a módosítási javaslataidat!</h4></i>
+        <h4> A játék már elindult, de <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFbeMBA9uWFOXbd6H_kyRKpDnkcJGvnsT8GhtpbmYJNFG0_w/viewform?usp=dialog">ide kattintva</a> csatlakozhatsz bátran a játékhoz bármikor! :)</h4></i>
         <h2 id="c1">1. A játék célja</h2>
         <p>A <em>Sok kicsi sokra megy</em> program célja, hogy a család közösen, játékos és motiváló módon gyűjtse össze a nyaraláshoz szükséges összeget. A játék során minden résztvevő napi, heti és végső vállalásokat teljesít, amelyekhez bónuszjóváírás és közös fődíj kapcsolódik. <br> A játék időtartama: <br><strong>2025. október 01. – 2026. június 05.</strong></p>
       </section>
@@ -295,24 +294,24 @@ border-radius: 8px;
         <p>A havi megtakarítási tranzakciókról szóló bizonylatot <strong>minden hónap 05.-ig napjáig szükséges elküldeni emailben.</strong></p>
        
       </p>
-
+<!--
       <img src="KÜLFÖLD.jpg" alt="Külföld" height="150px" width="500px" style="text-align: center;" class="responsive-img"> <br><br>
       <img src="orszagok.jpg" alt="Külföld" height="150px" width="500px" style="text-align: center;" class="responsive-img"> <br><br>
-
+-->
         <span>------------------ <br><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1eo1BTQfwFcKFpT222E-JaShCrwAmDlFt/view?usp=sharing">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
 <br> <b><i>2025. szeptember 28. </i></b> 
 
       </section>
 
-      <!-- Alsó CTA + kép -->
+      <!-- Alsó CTA + kép 
       <div class="cta-area">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFbeMBA9uWFOXbd6H_kyRKpDnkcJGvnsT8GhtpbmYJNFG0_w/viewform?usp=dialog" class="cta">Jelentkezz a játékra</a>
           <div class="cta-area cta2">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPlI9Gjv_Acx8LDHpGLnHBKLNgpmgW9yWsAtmzxp6-XEDwXw/viewform?usp=dialog" class="cta2"><button>Visszalépési nyilatkozat</button></a>
-        
+        -->
         <!-- A kép forrását cseréld a sajátodra -->
-        <img class="bottom-img" src="repulomalac.jpg" alt="Repülőmalac"> <br> Röfi, a repülőmalac :)
-      </div>
+        <img class="bottom-img" src="repulomalac.jpg" alt="Repülőmalac"> <br> <span style="display:block; text-align:center !important;">Röfi, a repülőmalac :)</span>
+
     </article>
   </main>
   </div>
