--- a/akciok.html
+++ b/akciok.html
@@ -108,8 +108,9 @@ button:focus {
       <a href="befizetesek.html">Befizetések</a>
       <a href="eldujra.html">Éld újra</a>
       <a href="akciok.html">Akciók</a>
+      <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="rangom.html"><i>Rangom</i></a>
+      <a href="tovabbiak.html"><i>Továbbiak</i></a>
     </div>
   </div>
 
@@ -120,7 +121,7 @@ button:focus {
       <img src="sksmakcio.jpg" alt="Akció">
       <div class="card-body">
         <h3 class="card-title"> Sok kicsi, sokra megy! </h3>
-        <p class="card-text"> <b>Promóciós időszak: <br> 2025. október 01. - 2026. június 05.</b> <br> Résztvevők: <br> Orosz Kristóf </p>
+        <p class="card-text"> <b>Promóciós időszak: <br> 2025. október 01. - 2026. június 05.</b></p>
         <a href="sksm.html"><button>ELOLVASOM A RÉSZLETEKET! </button></a>
       </div>
     </article> <br>
