--- a/befizetesek.html
+++ b/befizetesek.html
@@ -193,8 +193,9 @@
       <a href="befizetesek.html">Befizetések</a>
       <a href="eldujra.html">Éld újra</a>
       <a href="akciok.html">Akciók</a>
+      <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="rangom.html"><i>Rangom</i></a>
+      <a href="tovabbiak.html"><i>Továbbiak</i></a>
     </div>
   </div>
 
@@ -203,8 +204,7 @@
   <img src="hogyanjavitott.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
   <a href="akciok.html"></a>
    <a href="akciok.html">
-  <img src="sksmresz.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
-  <a href="akciok.html"></a>
+  </a>
   </div>
  
 
