--- a/rangom.html
+++ b/rangom.html
@@ -190,7 +190,9 @@
       <a href="befizetesek.html">Befizetések</a>
       <a href="eldujra.html">Éld újra</a>
       <a href="akciok.html">Akciók</a>
+      <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
+      <a href="tovabbiak.html"><i>Továbbiak</i></a>
     </div>
   </div>
 
