--- a/szamlalo.html
+++ b/szamlalo.html
@@ -212,8 +212,9 @@
       <a href="befizetesek.html">Befizetések</a>
       <a href="eldujra.html">Éld újra</a>
       <a href="akciok.html">Akciók</a>
+      <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="rangom.html"><i>Rangom</i></a>
+      <a href="tovabbiak.html"><i>Továbbiak</i></a>
     </div>
   </div>
 
