--- a/eldujra2.html
+++ b/eldujra2.html
@@ -174,11 +174,11 @@
 
   <h1>Éld újra!</h1>
 
-<a href="https://drive.google.com/drive/folders/1w-CE0MJYGWK77peUpGoNRcC7wnFzwKk_">
+<a href="eldujracrete2018lezart.html">
 <img src="Dia1.JPG" alt="Kréta 2018" width="250px" height="500px">
 </a>
 
-<a href="https://drive.google.com/drive/folders/10nKwVzSevBwvGSIQwu8PARCIfN7u3qfa">
+<a href="eldujracrete2022lezart.html">
 <img src="Dia2.JPG" alt="Kréta 2022" width="250px" height="500px">
 </a>
 
