--- a/eldujracrete2018.html
+++ b/eldujracrete2018.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Éld újra</title>
+  <title>Éld újra - Crete 2018</title>
   <style>
     * {
       box-sizing: border-box;
@@ -165,41 +165,78 @@
   height: auto;
   display: block; /* opcionális, hogy ne legyen felesleges üres hely alatta */
 }
-
+  .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      text-decoration: none;
+      font-size: 24px;
+      font-weight: bold;
+      color: #333;
+      background: #f1f1f1;
+      border: 1px solid #ccc;
+      border-radius: 50%;
+      width: 35px;
+      height: 35px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.3s;
+    }
+    .close-btn:hover {
+      background: #ff4d4d;
+      color: white;
+      border-color: #ff1a1a;
+    }
   </style>
 </head>
 <body>
 
+    <a href="eldujra.html" class="close-btn">×</a>
   <!-- MENÜSÁV -->
-  <div class="navbar">
-    <a href="index.html" class="logo">VakációVágyó 2026</a>
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="menu" id="navMenu">
-      <a href="szamlalo.html">Számláló</a>
-      <a href="befizetesek.html">Befizetések</a>
-      <a href="eldujra.html">Éld újra</a>
-      <a href="akciok.html">Akciók</a>
-      <a href="rangom.html">Rangom</a>
-      <a href="tudnivalok.html">Információk</a>
-      <a href="tovabbiak.html"><i>Továbbiak</i></a>
-    </div>
-  </div>
 
-<a href="eldujracrete2018.html">
-<img src="Dia1.JPG" alt="Kréta 2018" width="250px" height="500px">
+  <h1>Éld újra! - Crete 2018</h1>
+  <h4><i>Az alábbi képekre kattintva megtekintheted az adásokat!</i></h4>
+
+<a href="https://drive.google.com/file/d/1vp3texU2lLZHhrEuZhKDl29qYd-iCI-G/view?usp=sharing">
+<img src="c18.1.jpg" alt="Kréta 2018" width="250px" height="500px">
 </a>
 
-<a href="eldujracrete2022.html">
-<img src="Dia2.JPG" alt="Kréta 2022" width="250px" height="500px">
+<a href="https://drive.google.com/file/d/1tKOIZNxDydOhgUO7UW9Jz1f_bOm08cNT/view?usp=sharing">
+<img src="crete18.2.jpg" alt="Kréta 2018" width="250px" height="500px">
 </a>
 
-<a href="">
-<img src="Dia3.jpg" alt="Folytatódjon a kaland 2026..." width="250px" height="500px">
+<a href="https://drive.google.com/file/d/1MTMO84kyGo_XJZ0HF6jhWdoBN3Vx61BG/view?usp=sharing">
+<img src="c18.3.jpg" alt="Kréta 2018" width="250px" height="500px">
 </a>
+<a href="https://drive.google.com/file/d/18EWbgGP7vY_r1rrCN7tR1mncJDHbmqVT/view?usp=sharing">
+<img src="c18.4.jpg" alt="Kréta 2018" width="250px" height="500px">
+</a>
+
+<a href="https://drive.google.com/file/d/14sIqH7DZpeOfG1AgrtU21PiEDA-MNUHI/view?usp=sharing">
+<img src="c18.5.jpg" alt="Kréta 2018" width="250px" height="500px">
+</a>
+
+<a href="https://drive.google.com/file/d/1eaq-1qDKaNmjc3SpQWQ2fI5mzrGi-2Xx/view?usp=sharing">
+<img src="c18.6.jpg" alt="Kréta 2018" width="250px" height="500px">
+</a>
+
+<a href="https://drive.google.com/file/d/1frejzYIlwk7jfl-15LwQjk2LsrJdr1EC/view?usp=sharing">
+<img src="c18.7.jpg" alt="Kréta 2018" width="250px" height="500px">
+</a>
+
+<a href="https://drive.google.com/file/d/1eRbyI7zz8xUvwTzvkLoeAgRvlTXGigfu/view?usp=sharing">
+<img src="c18.8.jpg" alt="Kréta 2018" width="250px" height="500px">
+</a>
+
+<a href="https://drive.google.com/file/d/1TPpp-jVAxfHUK1S20PayGKvLp2ruVyi-/view?usp=sharing">
+<img src="c18.9.jpg" alt="Kréta 2018" width="250px" height="500px">
+</a>
+
+<a href="https://drive.google.com/file/d/1zQxE7YfabwKthVLN7Hq96Jk8KDdGFfrQ/view?usp=sharing">
+<img src="c18.10.jpg" alt="Kréta 2018" width="250px" height="500px">
+</a>
+
 
 <script>
   function toggleMenu() {
