--- a/eldujracrete2022.html
+++ b/eldujracrete2022.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Éld újra</title>
+  <title>Éld újra - Crete 2022</title>
   <style>
     * {
       box-sizing: border-box;
@@ -166,40 +166,63 @@
   display: block; /* opcionális, hogy ne legyen felesleges üres hely alatta */
 }
 
+  .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      text-decoration: none;
+      font-size: 24px;
+      font-weight: bold;
+      color: #333;
+      background: #f1f1f1;
+      border: 1px solid #ccc;
+      border-radius: 50%;
+      width: 35px;
+      height: 35px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.3s;
+    }
+    .close-btn:hover {
+      background: #ff4d4d;
+      color: white;
+      border-color: #ff1a1a;
+    }
   </style>
 </head>
 <body>
 
+      <a href="eldujra.html" class="close-btn">×</a>
   <!-- MENÜSÁV -->
-  <div class="navbar">
-    <a href="index.html" class="logo">VakációVágyó 2026</a>
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="menu" id="navMenu">
-      <a href="szamlalo.html">Számláló</a>
-      <a href="befizetesek.html">Befizetések</a>
-      <a href="eldujra.html">Éld újra</a>
-      <a href="akciok.html">Akciók</a>
-      <a href="rangom.html">Rangom</a>
-      <a href="tudnivalok.html">Információk</a>
-      <a href="tovabbiak.html"><i>Továbbiak</i></a>
-    </div>
-  </div>
 
-<a href="eldujracrete2018.html">
-<img src="Dia1.JPG" alt="Kréta 2018" width="250px" height="500px">
+  <h1>Éld újra! - Crete 2022</h1>
+<h4><i>Az alábbi képekre kattintva megtekintheted az adásokat!</i></h4>
+<a href="https://drive.google.com/file/d/1YA69icljhHOPz2k-i1MDFhi_RSx2iV6c/view?usp=sharing">
+<img src="c22.1.jpg" alt="Kréta 2022" width="250px" height="500px">
+</a>
+<a href="https://drive.google.com/file/d/1sBKh3YhB8tmiWZPME3sgQsBZAknvFgkf/view?usp=sharing">
+<img src="c22.2.jpg" alt="Kréta 2022" width="250px" height="500px">
+</a>
+<a href="https://drive.google.com/file/d/1DV57pyAjKwZQMa1B5I77OFRFQxgeUBXy/view?usp=sharing">
+<img src="c22.3.jpg" alt="Kréta 2022" width="250px" height="500px">
+</a>
+<a href="https://drive.google.com/file/d/1eos8_BKxi0zIlEhu36nIC0BhTNkQoy-F/view?usp=sharing">
+<img src="c22.4.jpg" alt="Kréta 2022" width="250px" height="500px">
+</a>
+<a href="https://drive.google.com/file/d/1t2yzeQI8Bz2yBnLOpdFv-E74KVG-eIEA/view?usp=sharing">
+<img src="c22.5.jpg" alt="Kréta 2022" width="250px" height="500px">
+</a>
+<a href="https://drive.google.com/file/d/1K6W_jRqg2Sk3Ao_MwWDAyZZk8so-usUE/view?usp=sharing">
+<img src="c22.6.jpg" alt="Kréta 2022" width="250px" height="500px">
+</a>
+<a href="https://drive.google.com/file/d/1qVSFEoGmIjskuCBsILLpNHKTiHZYX_FT/view?usp=sharing">
+<img src="c22.7.jpg" alt="Kréta 2022" width="250px" height="500px">
+</a>
+<a href="https://drive.google.com/file/d/1xy5r6GzSt9qq2qLJz7p13B0zD7ZPPkSL/view?usp=sharing">
+<img src="c22.8.jpg" alt="Kréta 2022" width="250px" height="500px">
 </a>
 
-<a href="eldujracrete2022.html">
-<img src="Dia2.JPG" alt="Kréta 2022" width="250px" height="500px">
-</a>
-
-<a href="">
-<img src="Dia3.jpg" alt="Folytatódjon a kaland 2026..." width="250px" height="500px">
-</a>
 
 <script>
   function toggleMenu() {
