--- a/befizetesek.html
+++ b/befizetesek.html
@@ -222,6 +222,7 @@
         <div><span class="label">Összeg: 40.000 - Ft</span></div>
         <div><span class="label">Típus: Persely</span></div>
         <div><span class="label">Dátum: 2025.09.02.</span></div>
+        <div><span class="label">Pontok: <br>+8 pont</span></div>
         <div>
           <span class="label2">Tranzakció:</span> #VVB0001
           <a href="https://drive.google.com/file/d/11uIWijYF5XQ7H0Upd5YSDegLwKYVBZFp/view?usp=sharing" target="_blank" class="download-link">Letöltés</a>
@@ -236,9 +237,11 @@
         <div><span class="label">Összeg: 20.000 - Ft</span></div>
         <div><span class="label">Típus: Persely</span></div>
         <div><span class="label">Dátum: 2025.09.03.</span></div>
+        <div><span class="label">Pontok: <br>+4 pont</span></div>
         <div>
           <span class="label2">Tranzakció:</span> #VVB0002
           <a href="https://drive.google.com/file/d/1SQGIsCWklvPXNBf6gURxtxpPItnm6vXF/view?usp=sharing" target="_blank" class="download-link">Letöltés</a>
+        
         </div>
       </div>
     </div> 
