--- a/tovabbiak.html
+++ b/tovabbiak.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Továbbiak</title>
   <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      background: #fefcc8;
+      min-height: 100dvh;
+      /* teljes mobilnézet lefedése */
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+
+    main {
+      flex: 1;
+    }
+
     * {
       box-sizing: border-box;
     }
-  .btn2:hover {
-    background-color: #cc7000;    /* hoverre még sötétebb narancs */
-  }
+
+    .btn2:hover {
+      background-color: #cc7000;
+      /* hoverre még sötétebb narancs */
+    }
+
     body {
       margin: 0;
       padding: 0;
@@ -27,7 +49,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 1em 2em;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -73,7 +95,7 @@
         position: absolute;
         top: 60px;
         right: 20px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         border-radius: 10px;
         overflow: hidden;
       }
@@ -192,95 +214,109 @@
     .meret {
       font-size: 30px;
     }
+
     .individual-amount {
-  margin-top: 0.8em;
-  font-weight: bold; /* kis térköz a perselyszám után */
-}
-
-  :root{
-    --bg: #0f172a;         /* háttér (opcionális) */
-    --btn: #2563eb;        /* gomb színe */
-    --btn-hover: #1d4ed8;  /* hover */
-    --text: #fff;
-    --ring: #93c5fd;
-  }
-
-  /* Opcionális háttér kontraszt miatt: 
-  body { background: var(--bg); } */
-.btn2 {
-    background-color: darkorange; /* sötét narancs háttér */
-    color: white;                 /* fehér szöveg */
-}
-  .btn-row{
-    display: grid;
-    grid-template-columns: 1fr; /* mobil: egymás alatt */
-    gap: 14px;
-    max-width: 900px;
-    margin: 20px auto;
-    padding: 0 16px;
-  }
-
-  .btn.btn2 {
-  background-color: darkorange !important;
-  color: white !important;
-}
-
-.btn.btn2:hover {
-  background-color: #cc7000 !important;
-}
-
-  /* nagyobb kijelző: 3 oszlop */
-  @media (min-width: 768px){
-    .btn-row{
-      grid-template-columns: repeat(3, minmax(0,1fr));
+      margin-top: 0.8em;
+      font-weight: bold;
+      /* kis térköz a perselyszám után */
     }
-  }
 
-  .btn{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    min-height: 48px;
-    padding: 12px 20px;
-    border-radius: 9999px;            /* teljesen lekerekített */
-    background: var(--btn);
-    color: var(--text);
-    text-decoration: none;
-    font: 600 16px/1.2 system-ui, sans-serif;
-    letter-spacing: .2px;
-    box-shadow: 0 6px 18px rgba(0,0,0,.18);
-    transition: transform .12s ease, box-shadow .12s ease, background .12s ease;
-  }
+    :root {
+      --bg: #0f172a;
+      /* háttér (opcionális) */
+      --btn: #2563eb;
+      /* gomb színe */
+      --btn-hover: #1d4ed8;
+      /* hover */
+      --text: #fff;
+      --ring: #93c5fd;
+    }
 
-  .btn:hover{
-    background: var(--btn-hover);
-    transform: translateY(-1px);
-    box-shadow: 0 10px 24px rgba(0,0,0,.22);
-  }
+    /* Opcionális háttér kontraszt miatt: 
+  body { background: var(--bg); } */
+    .btn2 {
+      background-color: darkorange;
+      /* sötét narancs háttér */
+      color: white;
+      /* fehér szöveg */
+    }
 
-  .btn:active{
-    transform: translateY(0);
-    box-shadow: 0 6px 18px rgba(0,0,0,.18);
-  }
+    .btn-row {
+      display: grid;
+      grid-template-columns: 1fr;
+      /* mobil: egymás alatt */
+      gap: 14px;
+      max-width: 900px;
+      margin: 20px auto;
+      padding: 0 16px;
+    }
 
-  .btn:focus-visible{
-    outline: none;
-    box-shadow: 0 0 0 3px var(--ring), 0 8px 22px rgba(0,0,0,.18);
-  }
+    .btn.btn2 {
+      background-color: darkorange !important;
+      color: white !important;
+    }
 
-  /* Sötét mód támogatás (ha az oldal világos) */
-  @media (prefers-color-scheme: dark){
-    :root{ --bg:#0b1220; }
-  }
+    .btn.btn2:hover {
+      background-color: #cc7000 !important;
+    }
 
-  /* Mozgáscsökkentés tiszteletben tartása */
-  @media (prefers-reduced-motion: reduce){
-    .btn{ transition: none; }
-  }
+    /* nagyobb kijelző: 3 oszlop */
+    @media (min-width: 768px) {
+      .btn-row {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
 
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      min-height: 48px;
+      padding: 12px 20px;
+      border-radius: 9999px;
+      /* teljesen lekerekített */
+      background: var(--btn);
+      color: var(--text);
+      text-decoration: none;
+      font: 600 16px/1.2 system-ui, sans-serif;
+      letter-spacing: .2px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, .18);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease;
+    }
+
+    .btn:hover {
+      background: var(--btn-hover);
+      transform: translateY(-1px);
+      box-shadow: 0 10px 24px rgba(0, 0, 0, .22);
+    }
+
+    .btn:active {
+      transform: translateY(0);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, .18);
+    }
+
+    .btn:focus-visible {
+      outline: none;
+      box-shadow: 0 0 0 3px var(--ring), 0 8px 22px rgba(0, 0, 0, .18);
+    }
+
+    /* Sötét mód támogatás (ha az oldal világos) */
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #0b1220;
+      }
+    }
+
+    /* Mozgáscsökkentés tiszteletben tartása */
+    @media (prefers-reduced-motion: reduce) {
+      .btn {
+        transition: none;
+      }
+    }
   </style>
 </head>
+
 <body>
 
   <!-- MENÜSÁV -->
@@ -302,24 +338,28 @@
     </div>
   </div>
 
- 
-<h2><i>GYŰJTŐSZÁMLAKIVONATOK</i></h2>
 
-<div class="btn-row">
-  <a class="btn btn2" href="https://drive.google.com/file/d/11o7C-0eG_CLEBjWTG_idEr0DdObjP89C/view?usp=sharing"> 2025. SZEPTEMBER</a>
-</div>
+  <h2><i>GYŰJTŐSZÁMLAKIVONATOK</i></h2>
 
-
-
-<br>
-<h2><i>JÁTÉKSZABÁLYZATOK</i></h2>
+  <div class="btn-row">
+    <a class="btn btn2" href="https://drive.google.com/file/d/11o7C-0eG_CLEBjWTG_idEr0DdObjP89C/view?usp=sharing"> 2025.
+      SZEPTEMBER</a>
+  </div>
 
 
-<div class="btn-row">
-  <a class="btn" href="https://drive.google.com/file/d/1sOTW_jWKU0rb-TEgBdRr4FCbumxZ9jED/view?usp=sharing">PONTGYŰJTŐ RENDSZER <br></a>
-  <a class="btn" href="https://drive.google.com/file/d/1eo1BTQfwFcKFpT222E-JaShCrwAmDlFt/view?usp=sharing">SOK KICSI SOKRA MEGY</a> 
-   <a class="btn" href="https://drive.google.com/file/d/1rryYoVr3c1okkjlAftWq41vBFZOZQcPd/view?usp=sharing">NYERJ ÉS CSEKKOLJ KI A TÉLBŐL</a> 
-</div>
+
+  <br>
+  <h2><i>JÁTÉKSZABÁLYZATOK</i></h2>
+
+
+  <div class="btn-row">
+    <a class="btn" href="https://drive.google.com/file/d/1sOTW_jWKU0rb-TEgBdRr4FCbumxZ9jED/view?usp=sharing">PONTGYŰJTŐ
+      RENDSZER <br></a>
+    <a class="btn" href="https://drive.google.com/file/d/1eo1BTQfwFcKFpT222E-JaShCrwAmDlFt/view?usp=sharing">SOK KICSI
+      SOKRA MEGY</a>
+    <a class="btn" href="https://drive.google.com/file/d/1rryYoVr3c1okkjlAftWq41vBFZOZQcPd/view?usp=sharing">NYERJ ÉS
+      CSEKKOLJ KI A TÉLBŐL</a>
+  </div>
 
   <script>
     // NAVIGÁCIÓS MENÜ
@@ -328,4 +368,5 @@
     }
   </script>
 </body>
+
 </html>
