--- a/akciok.html
+++ b/akciok.html
@@ -242,7 +242,7 @@
               href="https://drive.google.com/file/d/1rryYoVr3c1okkjlAftWq41vBFZOZQcPd/view?usp=sharing"><i>ide
                 kattintva</i></a> olvashatsz!</b></p>
 
-        <p class="card-text"> <b><i>Blokkszámláló: </b> <br> Orosz Szilvia blokkjainak száma: </i> <b>0 db</b><br>Orosz
+        <p class="card-text"> <b><i>Blokkszámláló: </i> </b> <br> Orosz Szilvia blokkjainak száma:  <b>0 db </b><br>Orosz
           Sándor blokkjainak száma: <b>0 db</b> <br>Orosz Kristóf blokkjainak száma: <b>0 db</b></i><br><b>Összesen: 0
             db</b></p>
         <p class="card-text"><b><i>A blokkszámlálót minden vasárnap 22:00-kor frissítjük!</i></b> <br><i>Utolsó
