--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VakációVágyó 2026 – Reszponzív kezdőlap</title>
+  <title>VakációVágyó 2026</title>
   <style>
     :root {
       --duration-ms: 5000;
       --duration: calc(var(--duration-ms) * 1ms);
-      --bg: #0d6efd;
+      --bg: #1e90ff;
       --text: #ffffff;
       --yellow: #ffd700;
     }
@@ -90,7 +90,6 @@
       animation: zoomIn var(--duration) ease-out both;
     }
 
-    .title span.small { display: block; font-weight: 600; font-size: 1.4rem; }
     .title span.big { display: block; font-size: clamp(2.2rem, 5vw + .5rem, 5rem); }
 
     @keyframes zoomIn {
@@ -130,33 +129,12 @@
       gap: .6rem;
       justify-items: center;
     }
-.right-img img {
-  width: 85%;               /* 🔹 ne foglalja el teljesen a rendelkezésre álló helyet */
-  max-width: 380px;         /* 🔹 laptopon kisebb lesz */
-  height: auto;
-  border-radius: 20px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  object-fit: contain;
-  display: block;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .right-img img {
-    width: 90%;
-    max-width: 320px;       /* 🔹 mobilon kicsit kisebb, de arányos */
-  }
-}
 
     .loading__label {
       font-size: 1.1rem;
       color: #fff;
       opacity: 0.9;
     }
-html, body {
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: hidden; /* 🔒 Megakadályozza a függőleges elcsúszást is */
-}
 
     .progress {
       width: 80%;
@@ -190,10 +168,9 @@ html, body {
       align-items: center;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 3rem;
-      padding: 2rem;
+      gap: 2rem;
+      padding: 1.5rem;
       box-sizing: border-box;
-      overflow: hidden;
     }
 
     .left-text {
@@ -203,22 +180,26 @@ html, body {
       line-height: 1.6;
       text-align: center;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
+      gap: 1rem;
     }
 
     .right-img {
-      
+      flex: 1 1 400px;
+      display: flex;
       align-items: center;
       justify-content: center;
-      gap: 1.2rem;
     }
 
     .right-img img {
-      width: 100%;
-      max-width: 500px;
-      max-height: 350px;
-      border-radius: 5%;
+      width: 85%;
+      max-width: 400px;
+      height: auto;
+      border-radius: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      object-fit: contain;
     }
 
     /* --- Bejelentkezés gomb --- */
@@ -233,31 +214,13 @@ html, body {
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: transform 0.2s ease, background-color 0.3s ease;
-      z-index: 50;
     }
 
     .login-btn:hover {
       transform: scale(1.05);
       background-color: #ffea00;
     }
-   .login-btn {
-      background-color: #ffd700;
-      color: #000;
-      font-weight: 700;
-      font-size: 1.1rem;
-      padding: 0.8rem 1.6rem;
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: transform 0.2s ease, background-color 0.3s ease;
-      z-index: 50;
-    }
 
-    .login-btn:hover {
-      transform: scale(1.05);
-      background-color: #ffea00;
-    }
     /* Laptop: jobb felső sarokban */
     @media (min-width: 769px) {
       .login-btn {
@@ -267,34 +230,43 @@ html, body {
       }
     }
 
-    /* Mobil: fixen alul középen */
+    /* Mobil: szöveg alatt, minimális térközzel */
     @media (max-width: 768px) {
-      .login-btn {
-        position: fixed;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 80%;
-        font-size: 1.1rem;
-        padding: 1rem;
-        z-index: 999;
-      }
-
-      header {
-        font-size: 2rem;
+      main {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0.4rem;
+        padding: 0.5rem 1rem 1rem;
       }
 
       .left-text {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
+        line-height: 1.4;
+        text-align: center;
+        margin: 0;
+        gap: 0.4rem;
       }
 
-      main {
-        gap: 1rem; /* kisebb térköz mobilon */
-        padding: 1rem 1rem 5rem; /* hely a fix gombnak */
+      .login-btn {
+        position: static;
+        display: block;
+        margin: 0.3rem auto;
+        width: 75%;
+        font-size: 1.1rem;
+        padding: 0.8rem;
+      }
+
+      .right-img {
+        margin-top: 0.4rem;
       }
 
       .right-img img {
-        max-width: 90vw;
+        max-width: 85vw;
+        width: 100%;
+        height: auto;
+        margin: 0 auto;
+        display: block;
       }
     }
 
@@ -306,7 +278,8 @@ html, body {
       background: rgba(0,0,0,0.5);
       backdrop-filter: blur(3px);
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
+      padding-top: 5vh;
       z-index: 10000;
     }
 
@@ -371,9 +344,7 @@ html, body {
         </div>
       </div>
 
-      <h2 class="title">
-        <span class="big">VakációVágyó 2026</span>
-      </h2>
+      <h2 class="title"><span class="big">VakációVágyó</span></h2>
 
       <div class="slide-area">
         <img src="repulo.png" alt="Repülő animáció" class="slider">
@@ -392,14 +363,13 @@ html, body {
   <main>
     <div class="left-text">
       <b><i>Fogjunk össze 🤝, tegyünk félre 💰, és utazzunk az egyenlítő környékére. 🌎</i></b>
+      <button class="login-btn" id="loginBtn">BEJELENTKEZÉS</button>
     </div>
 
     <div class="right-img">
-      <img src="vakaciovagyo.jpg" alt="Utazás hangulatkép" width="100px" height="200px">
+      <img src="vakaciovagyo.jpg" alt="Utazás hangulatkép" height="150px" width="100px">
     </div>
   </main>
-
-  <button class="login-btn" id="loginBtn">BEJELENTKEZÉS</button>
 
   <!-- === Bejelentkezés modal === -->
   <div class="login-modal" id="loginModal">
