--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       --yellow: #ffd700;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -28,6 +26,8 @@
       min-height: 100vh;
     }
 
+    h1, h2, h3, p { margin: 0; }
+
     /* ===== MODAL (repülős intro) ===== */
     .modal {
       position: fixed;
@@ -39,7 +39,6 @@
       z-index: 9999;
       overflow: hidden;
     }
-
     .modal.hidden { display: none; }
 
     .modal__wrap {
@@ -53,7 +52,6 @@
       text-align: center;
     }
 
-    /* --- Visszaszámláló --- */
     .countdown-section {
       display: flex;
       flex-direction: column;
@@ -63,49 +61,30 @@
       font-weight: 700;
       text-align: center;
     }
+    .countdown-title { font-size: clamp(1.3rem, 1rem + 1vw, 2rem); }
+    .countdown { display: flex; gap: 1.5rem; justify-content: center; }
+    .countdown-item .number { font-size: clamp(2.5rem, 3vw + 1rem, 4rem); }
+    .countdown-item .label { font-size: clamp(0.8rem, 0.7rem + 0.3vw, 1rem); }
 
-    .countdown-title {
-      font-size: clamp(1.3rem, 1rem + 1vw, 2rem);
-    }
-
-    .countdown {
-      display: flex;
-      gap: 1.5rem;
-      justify-content: center;
-    }
-
-    .countdown-item .number {
-      font-size: clamp(2.5rem, 3vw + 1rem, 4rem);
-    }
-
-    .countdown-item .label {
-      font-size: clamp(0.8rem, 0.7rem + 0.3vw, 1rem);
-    }
-
-    /* --- Cím --- */
     .title {
       font-weight: 800;
       line-height: 1.1;
       text-shadow: 0 6px 20px rgba(0,0,0,.25);
       animation: zoomIn var(--duration) ease-out both;
     }
-
     .title span.big { display: block; font-size: clamp(2.2rem, 5vw + .5rem, 5rem); }
-
     @keyframes zoomIn {
       0% { transform: scale(.85); opacity: 0; }
       12% { opacity: 1; }
       100% { transform: scale(1); opacity: 1; }
     }
 
-    /* --- Repülő --- */
     .slide-area {
       position: relative;
       width: 100%;
       height: clamp(120px, 20vh, 220px);
       overflow: hidden;
     }
-
     .slider {
       position: absolute;
       top: 50%;
@@ -115,27 +94,19 @@
       border: none;
       animation: planeFly var(--duration) linear forwards;
     }
-
     @keyframes planeFly {
       0% { transform: translateX(-200px) translateY(-50%); opacity: 1; }
       90% { transform: translateX(100vw) translateY(-50%); opacity: 1; }
       100% { transform: translateX(120vw) translateY(-50%); opacity: 0; }
     }
 
-    /* --- Betöltés --- */
     .loading {
       width: 100%;
       display: grid;
       gap: .6rem;
       justify-items: center;
     }
-
-    .loading__label {
-      font-size: 1.1rem;
-      color: #fff;
-      opacity: 0.9;
-    }
-
+    .loading__label { font-size: 1.1rem; color: #fff; opacity: 0.9; }
     .progress {
       width: 80%;
       height: 10px;
@@ -143,53 +114,53 @@
       background: rgba(255,255,255,.2);
       overflow: hidden;
     }
-
     .progress__bar {
       height: 100%;
       width: 0%;
       background: linear-gradient(90deg, #fff, rgba(255,255,255,.8));
       animation: fill var(--duration) linear forwards;
     }
-
     @keyframes fill { from { width: 0%; } to { width: 100%; } }
 
     /* ===== FŐTARTALOM ===== */
     header {
       text-align: center;
-      padding: 2rem 0 1rem;
-      font-size: 2.5rem;
+      padding: 1rem 0;
+      font-size: 2.2rem;
       font-weight: 800;
       color: black;
     }
 
     main {
-      flex: 1;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      align-items: stretch;
+      justify-content: flex-start;
       flex-wrap: wrap;
-      gap: 2rem;
-      padding: 1.5rem;
+      gap: 1rem;
+      padding: 1rem;
       box-sizing: border-box;
     }
 
     .left-text {
       flex: 1 1 400px;
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       font-weight: 600;
-      line-height: 1.6;
-      text-align: center;
+      line-height: 1.5;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 1rem;
+      gap: .6rem;
+      align-items: flex-start;
+      justify-content: flex-start;
+      text-align: left;
     }
+
+    .main-line { font-weight: 700; }
+    .subline { font-size: 1.1rem; font-weight: 600; opacity: .9; }
 
     .right-img {
       flex: 1 1 400px;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
     }
 
@@ -202,71 +173,60 @@
       object-fit: contain;
     }
 
-    /* --- Bejelentkezés gomb --- */
     .login-btn {
       background-color: #ffd700;
       color: #000;
       font-weight: 700;
-      font-size: 1.1rem;
-      padding: 0.8rem 1.6rem;
+      font-size: 1.05rem;
+      padding: 0.7rem 1.4rem;
       border: none;
       border-radius: 50px;
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: transform 0.2s ease, background-color 0.3s ease;
+      width: fit-content;
     }
+    .login-btn:hover { transform: scale(1.05); background-color: #ffea00; }
 
-    .login-btn:hover {
-      transform: scale(1.05);
-      background-color: #ffea00;
-    }
-
-    /* Laptop: jobb felső sarokban */
+    /* ===== DESKTOP / LAPTOP ===== */
     @media (min-width: 769px) {
       .login-btn {
         position: fixed;
         top: 20px;
         right: 20px;
       }
+      .left-text {
+        align-items: center;      /* vízszintes közép */
+        justify-content: center;  /* függőleges közép */
+        text-align: center;
+      }
     }
 
-    /* Mobil: szöveg alatt, minimális térközzel */
+    /* ===== MOBIL: kép felül, alatta középre igazított szövegek + gomb ===== */
     @media (max-width: 768px) {
       main {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 0.4rem;
-        padding: 0.5rem 1rem 1rem;
-      }
-
-      .left-text {
-        font-size: 1.2rem;
-        line-height: 1.4;
-        text-align: center;
-        margin: 0;
-        gap: 0.4rem;
-      }
-
-      .login-btn {
-        position: static;
-        display: block;
-        margin: 0.3rem auto;
-        width: 75%;
-        font-size: 1.1rem;
-        padding: 0.8rem;
+        flex-direction: column;   /* egymás alá */
+        gap: .8rem;
+        align-items: center;      /* a blokkok középre */
       }
 
       .right-img {
-        margin-top: 0.4rem;
+        order: 1;                 /* KÉP ELŐL */
+        justify-content: center;
+        align-items: center;
+        width: 100%;
       }
 
-      .right-img img {
-        max-width: 85vw;
+      .left-text {
+        order: 2;                 /* SZÖVEGEK ALATTA */
+        align-items: center;      /* szöveg belső igazítás középre */
+        text-align: center;
         width: 100%;
-        height: auto;
-        margin: 0 auto;
-        display: block;
+      }
+
+      .login-btn {
+        position: static;         /* ne legyen fix */
+        margin-top: .6rem;
       }
     }
 
@@ -282,7 +242,6 @@
       padding-top: 5vh;
       z-index: 10000;
     }
-
     .login-modal.active { display: flex; }
 
     .modal-content {
@@ -294,12 +253,10 @@
       box-shadow: 0 6px 20px rgba(0,0,0,0.25);
       animation: fadeIn 0.4s ease;
     }
-
     @keyframes fadeIn {
       from {opacity: 0; transform: translateY(-20px);}
       to {opacity: 1; transform: translateY(0);}
     }
-
     .modal-content h2 { color: #0d47a1; margin-bottom: 1rem; }
 
     .modal-content input {
@@ -311,7 +268,6 @@
       border: 1px solid #ccc;
       text-align: center;
     }
-
     .modal-content button {
       background-color: #0d6efd;
       color: #fff;
@@ -321,12 +277,7 @@
       cursor: pointer;
       font-weight: 600;
     }
-
-    .error-msg {
-      color: red;
-      font-weight: 600;
-      display: none;
-    }
+    .error-msg { color: red; font-weight: 600; display: none; }
   </style>
 </head>
 <body>
@@ -362,12 +313,13 @@
 
   <main>
     <div class="left-text">
-      <b><i>Fogjunk össze 🤝, tegyünk félre 💰, és utazzunk az egyenlítő környékére. 🌎</i></b>
+      <p class="main-line"><b><i>Fogjunk össze 🤝, tegyünk félre 💰, és utazzunk az egyenlítő környékére. 🌎</i></b></p>
+      <p class="subline">Ne feledd! Sok kicsi, sokra megy</p>
       <button class="login-btn" id="loginBtn">BEJELENTKEZÉS</button>
     </div>
 
     <div class="right-img">
-      <img src="vakaciovagyo.jpg" alt="Utazás hangulatkép" height="150px" width="100px">
+      <img src="vakaciovagyo.jpg" alt="Utazás hangulatkép" height="150" width="100">
     </div>
   </main>
 
@@ -389,6 +341,7 @@
             h = document.getElementById('hours'),
             m = document.getElementById('minutes'),
             s = document.getElementById('seconds');
+
       function update() {
         const now = new Date(), diff = t - now;
         if (diff <= 0) return;
@@ -398,36 +351,37 @@
         s.textContent = Math.floor((diff / 1000) % 60).toString().padStart(2,'0');
       }
       setInterval(update,1000); update();
+
       setTimeout(()=>document.getElementById('vv2026-modal').classList.add('hidden'),5000);
     })();
 
     // --- Bejelentkezés ---
-    const loginBtn=document.getElementById('loginBtn');
-    const loginModal=document.getElementById('loginModal');
-    const confirmBtn=document.getElementById('confirmBtn');
-    const passwordInput=document.getElementById('passwordInput');
-    const errorMsg=document.getElementById('errorMsg');
+    const loginBtn = document.getElementById('loginBtn');
+    const loginModal = document.getElementById('loginModal');
+    const confirmBtn = document.getElementById('confirmBtn');
+    const passwordInput = document.getElementById('passwordInput');
+    const errorMsg = document.getElementById('errorMsg');
 
-    loginBtn.addEventListener('click',()=>{
+    loginBtn.addEventListener('click', ()=>{
       loginModal.classList.add('active');
       passwordInput.value='';
       errorMsg.style.display='none';
     });
 
-    confirmBtn.addEventListener('click',()=>{
-      if(passwordInput.value.trim()==='NY26'){
-        window.location.href='szamlalo.html';
+    confirmBtn.addEventListener('click', ()=>{
+      if (passwordInput.value.trim() === 'NY26') {
+        window.location.href = 'szamlalo.html';
       } else {
-        errorMsg.style.display='block';
+        errorMsg.style.display = 'block';
       }
     });
 
-    window.addEventListener('keydown',e=>{
-      if(e.key==='Escape') loginModal.classList.remove('active');
+    window.addEventListener('keydown', e=>{
+      if (e.key === 'Escape') loginModal.classList.remove('active');
     });
 
-    loginModal.addEventListener('click',e=>{
-      if(e.target===loginModal) loginModal.classList.remove('active');
+    loginModal.addEventListener('click', e=>{
+      if (e.target === loginModal) loginModal.classList.remove('active');
     });
   </script>
 </body>
